err/flvlib.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/flvlib'...
Compiling './lib/python3.5/site-packages/flvlib/helpers.py'...
***   File "./lib/python3.5/site-packages/flvlib/helpers.py", line 125
    print cls.pformat(val)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/flvlib/scripts'...
Compiling './lib/python3.5/site-packages/flvlib/scripts/debug_flv.py'...
***   File "./lib/python3.5/site-packages/flvlib/scripts/debug_flv.py", line 18
    except IOError, (errno, strerror):
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/flvlib/scripts/index_flv.py'...
***   File "./lib/python3.5/site-packages/flvlib/scripts/index_flv.py", line 155
    except EnvironmentError, (errno, strerror):
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/flvlib/scripts/retimestamp_flv.py'...
***   File "./lib/python3.5/site-packages/flvlib/scripts/retimestamp_flv.py", line 76
    except IOError, (errno, strerror):
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/flvlib-0.1.13.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
